enhanced  web app heading

--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 20;
   font-style: nortrynhyut54zmal;
+   letter-spacing: 8px;
+    font-size: 80px;
+     text-shadow: 1px 1px 1px rgb(0, 0, 0);
   
 }
 
